src/objects/Installer__c.object
<CustomObject>
    <fields>
        <fullName>Amount_After__c</fullName>
        <formula>Total_Panel_Pay__c * Utilization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount After %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Installers1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Install_Expected_Completion__c</fullName>
        <formula>Opportunity__r.Expected_Install_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Expected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Finished__c</fullName>
        <formula>Opportunity__r.Install_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Finished</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Start__c</fullName>
        <formula>Opportunity__r.Actual_Install_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Installers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCS_Rate__c</fullName>
        <formula>Amount_After__c / Panel_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCS Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Count__c</fullName>
        <formula>Opportunity__r.Number_Of_Panels__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Panel_Pay__c</fullName>
        <formula>Panel_Count__c *  Contact__r.PP_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Panel Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <label>Utilization %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Installation Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Installer  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>